tests/samples/negative/functions/defer_non_call.ax
module defer_non_call;

fn main() -> i32 {
    defer 1;
    return 0;
}
